feat: 🚗 add drivers and vehicles registry (without files)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=FreeWheelBackend
+server.port=8081
+
+spring.datasource.url=jdbc:postgresql://aws-0-us-east-1.pooler.supabase.com:5432/postgres
+spring.datasource.username=postgres.jbxpsjdybtnuzhbncpck
+spring.datasource.password=iE4s1xI5B9jsoosA
+
+# Configuración de JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
