fix: configure and add env file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=FreeWheelBackend
 server.port=8081
 
-spring.datasource.url=jdbc:postgresql://aws-0-us-east-1.pooler.supabase.com:5432/postgres
-spring.datasource.username=postgres.jbxpsjdybtnuzhbncpck
-spring.datasource.password=iE4s1xI5B9jsoosA
+spring.datasource.url=${URL_DB}
+spring.datasource.username=${USER_DB}
+spring.datasource.password=${PASSWORD_DB}
 
 # Configuración de JPA/Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
