Configure env file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,13 +7,12 @@ spring.datasource.password=${PASSWORD_DB}
 
 # Configuración de JPA/Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # Supabase Storage Configuration
-supabase.url=${storage_url}
-supabase.anon.key=${service_rol_key}
+supabase.url=${STORAGE_URL}
+supabase.anon.key=${SERVICE_ROL_KEY}
 supabase.storage.bucket=profile-images
 
 # File upload configuration
