feat: register vehicles and drivers uploading files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 # Supabase Storage Configuration
 supabase.url=${STORAGE_URL}
 supabase.anon.key=${SERVICE_ROL_KEY}
-supabase.storage.bucket=profile-images
+supabase.storage.bucket=archivos-usuarios
 
 # File upload configuration
 spring.servlet.multipart.max-file-size=10MB
