--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,7 @@ supabase.storage.bucket=archivos-usuarios
 # File upload configuration
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+#JWT Configuration
+jwt.secret=${JWT_SECRET_KEY}
+jwt.expiration=${JWT_EXPIRATION}
