fix: Add driver and vehicle information to TripDTO and implement retrieval in TripService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.servlet.multipart.max-request-size=10MB
 #JWT Configuration
 jwt.secret=${JWT_SECRET_KEY}
 jwt.expiration=${JWT_EXPIRATION}
+
+spring.config.import=optional:file:.env[.properties]
