(fix): Change registration field of password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=${URL_DB}
 spring.datasource.username=${USER_DB}
 spring.datasource.password=${PASSWORD_DB}
 
-# Configuración de JPA/Hibernate
+# Configuraci?n de JPA/Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
